Arreglos menos y agregado el carousel principal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
 .container > .row > .col > section {
     height: 500px;
 }
+
+.carousel-item img {
+    height: 700px;
+    object-fit: cover;
+  }
