--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 .carousel-item img {
-    height: 700px;
-    object-fit: cover;
-  }
+  height: 700px;
+  object-fit: cover;
+}
+#sec-trabajos .card > img {
+  height: 200px;
+  object-fit: cover;
+}
