--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.bg-navbar {
+  background: rgba(2, 0, 36, 0.452);
+}
+
 .carousel-item img {
   height: 700px;
   object-fit: cover;
@@ -5,4 +9,18 @@
 #sec-trabajos .card > img {
   height: 200px;
   object-fit: cover;
+}
+
+/* Text shadow generator https://cssgenerator.org/text-shadow-css-generator.html */
+.carousel-caption h5 {
+  font-family: "Rowdies", cursive;
+  text-shadow: -1px 2px 10px rgba(0, 0, 0, 0.52);
+}
+
+.text-rowdies {
+  font-family: "Rowdies", cursive;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
 }
